fix(checkbox, select): z-index issues

--- a/src/stories/select/Select.module.scss
+++ b/src/stories/select/Select.module.scss
@@ -14,6 +14,11 @@
     align-items: center;
 }
 
+.transitionContainer {
+    position: relative;
+    z-index: 10;
+}
+
 .options {
     position: absolute;
     top: 100%;
